--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 <IfModule mod_rewrite.c>
   RewriteEngine on
-  RewriteRule ^$ public/ [L]
+  RewriteCond %{REQUEST_URI} !/app/upload/(.*)
   RewriteRule (.*) public/$1 [L]
 </IfModule>
